log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Tue 28 Mar 2023 11:45:52 PM UTC: 
 tests:  0|6
total_score: 0/70
c24e93c
Tue 28 Mar 2023 11:46:45 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:14:3: error: conversion to non-scalar type requested
   14 |   ArrayList Lista = (ArrayList) malloc(sizeof(ArrayList));
      |   ^~~~~~~~~
arraylist.c:14:13: error: unused variable ‘Lista’ [-Werror=unused-variable]
   14 |   ArrayList Lista = (ArrayList) malloc(sizeof(ArrayList));
      |             ^~~~~
cc1: all warnings being treated as errors
Compilation failed
01c3ed3
Tue 28 Mar 2023 11:47:17 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:14:14: error: unused variable ‘Lista’ [-Werror=unused-variable]
   14 |   ArrayList *Lista = (ArrayList *) malloc(sizeof(ArrayList));
      |              ^~~~~
cc1: all warnings being treated as errors
Compilation failed
e24eac1
Tue 28 Mar 2023 11:47:27 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
4ace9f1
Tue 28 Mar 2023 11:57:26 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:15:12: error: incompatible types when returning type ‘ArrayList’ {aka ‘struct ArrayList’} but ‘ArrayList *’ {aka ‘struct ArrayList *’} was expected
   15 |     return Lista;
      |            ^~~~~
arraylist.c:16:1: error: control reaches end of non-void function [-Werror=return-type]
   16 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
70339ee
Tue 28 Mar 2023 11:57:41 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
test.c: In function ‘createList’:
arraylist.c:15:12: error: ‘Lista’ is used uninitialized [-Werror=uninitialized]
   15 |     return Lista;
      |            ^~~~~
cc1: all warnings being treated as errors
Compilation failed
d4a9a6b
Tue 28 Mar 2023 11:57:49 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:15:12: error: incompatible types when returning type ‘ArrayList’ {aka ‘struct ArrayList’} but ‘ArrayList *’ {aka ‘struct ArrayList *’} was expected
   15 |     return Lista;
      |            ^~~~~
arraylist.c:16:1: error: control reaches end of non-void function [-Werror=return-type]
   16 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
526a985
